k8s/apps/gearhawk/web-gearhawk-dev/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-gearhawk-dev
  annotations:
    operator.1password.io/auto-restart: "true"
