k8s/apps/gearhawk/web-gearhawk-dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-gearhawk
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-gearhawk
  template:
    metadata:
      labels:
        app: web-gearhawk
    spec:
      containers:
        - name: web-gearhawk
          image: wjt40398/gearhawk:web-dev
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 1
              memory: 2Gi
      imagePullSecrets:
        - name: docker-secret
