k8s/apps/gearhawk/web-gearhawk-dev/external-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-gearhawk-external
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  parentRefs:
    - name: external
      namespace: gateway
  hostnames:
    - dev.gearhawk.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: web-gearhawk-svc
          port: 80
